Added JBANG_JAVA_OPTIONS