@@ -1,4 +1,7 @@
 # Shell 1 - run JavalinServer
+#
+export JBANG_JAVA_OPTIONS="-server -Xms2048m -Xmx2048m -XX:+UseZGC -XX:+ZGenerational -XX:+UseDynamicNumberOfGCThreads"
+
 jbang JavalinServer.java
 
 # Shell 2 - benchmark JavalinServer with Apache Bench
